Crash When Painting Gradient Weight #35793

Closed
opened 2013-06-18 12:49:34 +02:00 by Leon Cheung · 3 comments
Member

%%%--- Operating System, Graphics card ---
Windows 7 64bit, FX2700M

- Blender version with error, and version that worked ---

As tested so far, from now back to 2.66a, earlier versions haven't been tried yet.

- Short description of error ---

Crash when painting gradient weight

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Load the default scene;
  2. Enter Weight Paint Mode;
  3. Alt + LMB or click "Weight Gradient" button, to draw a gradient weight;
  4. Try changing all options in F6 menu will lead to a crash.

PS: It works fine with those who already got weight groups. As tested by some local guys, such issue occurs on Windows 32 bit, too.

Actually no attachment needed for it, So thanks for checking.%%%

%%%--- Operating System, Graphics card --- Windows 7 64bit, FX2700M - Blender version with error, and version that worked --- As tested so far, from now back to 2.66a, earlier versions haven't been tried yet. - Short description of error --- Crash when painting gradient weight - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Load the default scene; 2. Enter Weight Paint Mode; 3. Alt + LMB or click "Weight Gradient" button, to draw a gradient weight; 4. Try changing all options in F6 menu will lead to a crash. PS: It works fine with those who already got weight groups. As tested by some local guys, such issue occurs on Windows 32 bit, too. Actually no attachment needed for it, So thanks for checking.%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r57564.%%%

%%%fixed r57564.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#35793
No description provided.