fix [#35793] Crash When Painting Gradient Weight